--- a/css/styles.scss
+++ b/css/styles.scss
@@ -7,4 +7,18 @@
 @import "2-pages/pageParts/_mixins.scss";
 @import "2-pages/pageParts/_buttons.scss";
 /****/
-
+.wrapper {
+  width: 100%;
+  max-width: 960px;
+  margin: 0 auto;
+  position: relative;
+}
+.zad1 {
+  text-transform: uppercase;
+  color: #fff;
+  background: green;
+  width: 100%;
+  height: 50px;
+  line-height: 50px;
+  text-align: center;
+}
