--- a/css/styles.scss
+++ b/css/styles.scss
@@ -18,7 +18,46 @@
   color: #fff;
   background: green;
   width: 100%;
-  height: 50px;
+  margin: 0 auto;
+  padding: 0px;
   line-height: 50px;
   text-align: center;
+  h3 {
+    margin: 15px auto;
+    padding: 0px;
+  }
+}
+.output {
+  background: grey;
+  clear: both;
+  line-height: 20px;
+  text-align: left;
+  white-space: pre;
+  color: #fff;
+  padding: 20px;
+  span {
+    text-align: center;
+    display: block;
+  }
+}
+.getDataButton {
+  @include button;
+}
+.buttonData {
+@include button;
+width: 275px;
+}
+.ajax {
+  @include clearfix;
+}
+.zad__ost {
+  h3{
+    text-transform: uppercase;
+    color: #fff;
+    background: green;
+    width: 100%;
+    height: 50px;
+    line-height: 50px;
+    text-align: center;
+  }
 }
